@@ -1,5 +1,7 @@
 Changes for 1.6.4
 
+ - [ZBX-842] fixed duplicate triggers in "Last 20 issues" in dashboard (Artem)
+ - [DEV-323] removed master nodes from dropdown (Artem)
  - [ZBX-837] removed sid from Zabbix logo link (Vedmak)
  - [ZBX-589] fixed processing of quoted floating point values (Sasha)
  - [ZBX-836] fixed probem with permissions of proxy shared memory (Sasha)
